src/test/deca/syntax/valid/sansobjet/DeclaIntToBigLim.deca
//
//Description: teste entier le plus grand
//Resultats: l'arbre abstrait se creer 
{
    int i = 2147483647;
}
