src/test/deca/syntax/invalid/sansobjet/DeclaToBigInt1.deca
//DeclaToBigInt1.deca:5:22: Erreur de compilation: Int arrondi a l'infini
//Description: teste debordement de flottant
//Resultats: erreur ligne 5: arrondi a l'infini
{
    int t = 2147483648;
}
